--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,7 +1,7 @@
 
 
 .section-footer{
-    @apply bg-[#2893Ea] pl-[3.45rem] pt-[3.19rem] pr-[1.96rem] desktop:pb-[3.04rem] 
+    @apply bg-[#00ABE4] pl-[3.45rem] pt-[3.19rem] pr-[1.96rem] desktop:pb-[3.04rem] 
   }
   
   .footer-first-div{
