--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -7,19 +7,19 @@
   
 
 .afs{
-  @apply desktop:h-[85vh] flex desktop:flex-row relative flex-col w-[100vw] bg-[#f6eaea] h-[fit] desktop:pt-[0rem] pt-[3rem] px-[1rem] pb-[5rem] desktop:pb-[0rem]
+  @apply desktop:h-[85vh] flex desktop:flex-row relative flex-col w-[100vw] bg-[#f6eaea] h-[fit] desktop:pt-[0rem] pt-[3rem] px-[1rem] pb-[5rem] desktop:pb-[0rem] wide:h-[90vh]
 }
 
 .afs-content{
   /* font-family: "Montserrat", sans-serif; */
 
-  @apply  w-[100%]  desktop:max-w-[60%]  flex-col justify-center flex desktop:pl-[1.5rem]
+  @apply  w-[100%]  desktop:max-w-[60%]  flex-col justify-center flex desktop:pl-[1.5rem] wide:pl-[3rem]
 }
 
 /* bg-[#f6eaea] */
 
 .afs-content h1{
-  @apply desktop:text-[2.1rem] font-bold desktop:w-[90%] w-[100%] text-[1.9rem]
+  @apply desktop:text-[2.1rem] font-bold desktop:w-[90%] w-[100%] wide:w-[80%] text-[1.9rem] wide:text-[3.5rem]
 }
 
 .afs-image{
@@ -29,7 +29,8 @@
 .afs-content h2{
   font-family: "Montserrat", sans-serif; 
 
-  @apply desktop:w-[80%] font-normal desktop:mt-[1rem] mt-[0.5rem] w-[100%] desktop:text-[1rem]  text-[0.9rem] }
+  @apply desktop:w-[80%] font-normal desktop:mt-[1rem] mt-[0.5rem] w-[100%] desktop:text-[1rem]  text-[0.9rem] wide:w-[60%] wide:text-[1.2rem]
+ }
 
 .afs-cta{
   @apply desktop:mt-[1rem] desktop:pl-[1rem] mt-[1rem]   desktop:m-[0rem]
@@ -37,7 +38,7 @@
 
 .afs-cta button{
   outline: 1px solid black ;
-  @apply bg-[white] text-black desktop:px-[2rem] desktop:py-[0.5rem] rounded-sm  text-[0.9rem] desktop:text-[1rem] py-[0.5rem] px-[1.4rem]
+  @apply bg-[white] text-black hover:text-white hover:bg-black desktop:px-[2rem] desktop:py-[0.5rem] rounded-sm  text-[0.9rem] desktop:text-[1rem] py-[0.5rem] px-[1.4rem] wide:px-[5rem] wide:py-[1rem] wide:font-bold wide:text-[1.1rem] transition-all
 }
 
 .afs-images{
@@ -47,11 +48,11 @@
 
 .one-box, .two-box{
   border: 2px solid white ;
-  @apply  desktop:h-[10.5rem] h-[7rem] w-[8rem] desktop:w-[11rem] rounded-md shadow-md
+  @apply  desktop:h-[10.5rem] h-[7rem] w-[8rem] desktop:w-[11rem] wide:w-[15rem] rounded-md shadow-md wide:h-[12rem]
 }
 
 .one-box{
-  @apply desktop:h-[13rem] h-[9rem] w-[8rem] desktop:w-[10rem] 
+  @apply desktop:h-[13rem] h-[9rem] w-[8rem] desktop:w-[10rem] wide:w-[15rem] wide:h-[19rem]
 }
 
 
@@ -157,18 +158,22 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
 
   .categories-section{
     /* background: linear-gradient(180deg, hsla(207, 96%, 71%, 1) 0%, hsla(0, 0%, 100%, 1) 22%); */
-    @apply w-[100vw] h-fit flex items-center  flex-col desktop:px-[3rem] phone:px-[1rem] relative phone:pt-[3rem]  desktop:pt-[10rem] mb-[9rem] wide:px-[4rem]
+    @apply w-[100vw] h-fit flex flex-col-reverse items-center  desktop:px-[3rem] phone:px-[1rem] relative phone:pt-[3rem]  desktop:pt-[10rem] mb-[9rem] wide:px-[4rem]  desktop:grid desktop:grid-cols-2
+  }
+
+  .cs-one{
+    @apply flex items-center justify-center flex-col w-fit
   }
 
   .frozen-food-categories{
-    @apply desktop:grid desktop:grid-cols-4 phone:grid phone:grid-cols-2 gap-[2rem] wide:gap-[3.5rem] mb-[3rem] relative phone:mb-[0rem]
+    @apply desktop:grid desktop:grid-cols-2 phone:grid phone:grid-cols-2 gap-[2rem] wide:gap-[3.5rem] mb-[3rem] relative phone:mb-[0rem]
   }
 
   .cs-heading{
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 800;
-    @apply desktop:text-[2.5rem] wide:text-[4rem] font-extrabold  text-[#2893EA] phone:text-[1.8rem] phone:text-center 
+    @apply desktop:text-[2.5rem] wide:text-[4rem] font-extrabold  text-[#b39595] phone:text-[1.8rem] phone:text-center 
   }
 
 .wm-image{
@@ -220,17 +225,25 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
 }
 
   .cs-subheading{
+    font-family: "Montserrat", sans-serif;
+
     @apply text-center wide:text-[1.5rem] desktop:w-[60%] font-[black] mt-[1rem] mb-[4rem] text-[0.9rem] phone:w-[100%] tablet:w-[80%] text-[#373232]
   }
 
+  /* #F7C6C6 */
+
   .ff-category{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    @apply flex items-center flex-col justify-center desktop:gap-[1rem] desktop:py-[2rem] desktop:px-[3rem] rounded-md font-bold text-[#2893EA] text-[1rem] hover:bg-[#6ab0e9] hover:text-white z-[100] relative wide:py-[3rem] wide:px-[4rem] hover:scale-110 transition-all phone:px-[0.3rem] phone:py-[1.5rem] phone:gap-[0.5rem] sphone:py-[1rem] sphone:text-[1rem] sphone:px-[0.5rem] sphone:gap-[0.1rem] text-center 
+    box-shadow: #f3dede 0px 5px 15px;
+    @apply flex items-center flex-col justify-center desktop:gap-[1rem] desktop:py-[1rem] desktop:px-[2rem] rounded-md font-bold text-[#2893EA] text-[1rem] hover:bg-[#f6eaea] hover:text-white z-[100] relative wide:py-[3rem] wide:px-[4rem] hover:scale-125 transition-all phone:px-[0.3rem] phone:py-[1.5rem] phone:gap-[0.5rem] sphone:py-[1rem] sphone:text-[1rem] sphone:px-[0.5rem] sphone:gap-[0.1rem] text-center 
   }
  
-  /* .ff-category p{
+  .ff-category p{
     @apply text-[0.8rem] sphone:w-[90%] wide:text-[1.02rem] text-black font-[black] text-center sphone:text-[0.6rem] phone:w-[9rem]; 
-  } */
+  }
+
+  .ff-category h2{
+    @apply text-[0.8rem] sphone:w-[90%] wide:text-[1.02rem] text-black font-[black] text-center sphone:text-[0.6rem] phone:w-[9rem]; 
+  }
 
 
   .cate{
@@ -239,93 +252,81 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
   }
 
 
+  
+    .body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #f0f0f0; /* Set your background color */
+    }
+  
+    .wave-container {
+      position: relative;
+      height: 40px; /* Adjust the height as needed */
+      background-color: #fff; /*get-in Set the same background color as your page */
+      overflow: hidden;
+      @apply desktop:h-[100px]
+    }
+  
+  
+  
+  
+    .wavel-container {
+      position: relative;
+      height: 40px; /* Adjust the height as needed */
+      background-color: #fff; /* Set the same background color as your page */
+      overflow: hidden;
+      @apply desktop:h-[100px]
+    }
+  
+  
+    .wave {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      fill: #f6eaea; /* Set the fill color for the wave */
+    }
+  
+  
+    .wavel {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      fill: #d4a1a1
+  ; /* Set the fill color for the wave */
+  @apply desktop:hidden
+    }
 
   .about-section{
 
-    @apply flex flex-col desktop:flex-row px-[1rem] desktop:px-[2.5rem] w-[100%]  justify-evenly pb-[4rem] wide:justify-center bg-[#e0effb]  tablet:items-center
+    @apply flex flex-col desktop:flex desktop:flex-row pl-[1rem] desktop:pl-[2.5rem] w-[100%]  justify-evenly desktop:pb-[0rem] pb-[4rem] wide:justify-center bg-[#f9f4f4] tablet:items-center desktop:h-[90vh]
   }
 
-  /* .curly{
-    background-image: url(../assets/images/wave.svg);
-  @apply   bg-center bg-cover bg-no-repeat h-[40vh] w-[100vw]
-  } */
-
-  /* .wave{
-    @apply h-[rem] w-[100vw]
-  } */
-
-
-
-
-
-
-  .body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #f0f0f0; /* Set your background color */
-  }
-
-  .wave-container {
-    position: relative;
-    height: 40px; /* Adjust the height as needed */
-    background-color: #fff; /*get-in Set the same background color as your page */
-    overflow: hidden;
-    @apply desktop:h-[100px]
-  }
-
-
-
-
-  .wavel-container {
-    position: relative;
-    height: 40px; /* Adjust the height as needed */
-    background-color: #fff; /* Set the same background color as your page */
-    overflow: hidden;
-    @apply desktop:h-[100px]
-  }
-
-
-  .wave {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    fill: #e0effb; /* Set the fill color for the wave */
-  }
-
-
-  .wavel {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    fill: #2893ea
-; /* Set the fill color for the wave */
-@apply desktop:hidden
-  }
 
   .asc-heading{
-    @apply desktop:text-[2.4em] font-bold  w-fit mt-[2rem] desktop:mt-[0rem] text-[#2893ea]  text-[2rem]
+    @apply desktop:text-[2.4em] font-bold  w-fit mt-[2rem] desktop:mt-[0rem] text-[#b39595]  text-[2rem]
   }
 
   .asc-subheading{
-    @apply text-[0.9rem] desktop:text-[1.3rem] font-medium w-fit phone:underline text-[#4f5053];
+    @apply text-[0.9rem] desktop:text-[1.3rem] font-medium w-fit  desktop:mb-[1rem] phone:underline text-[#4f5053]; 
   }
 
   .about-section-content{
-    @apply desktop:w-[40%] flex flex-col desktop:gap-[0.5rem] desktop:justify-center wide:gap-[1rem] wide:pl-[1rem] phone:gap-[1rem] phone:mb-[4rem] desktop:mb-[0rem] phone:justify-center phone:items-center desktop:items-start  tablet:items-center 
+    @apply desktop:w-[60%] flex flex-col desktop:gap-[0.5rem] desktop:justify-center wide:gap-[1rem] wide:pl-[1rem] phone:gap-[1rem] phone:mb-[4rem] desktop:mb-[0rem] phone:justify-center phone:items-center desktop:items-center   tablet:items-center  h-[100%]  desktop:flex
  
 
   }
 
 .asc-text{
-  @apply text-[0.9rem] desktop:text-left desktop:w-[90%] leading-6  wide:w-[80%] phone:text-center tablet:w-[80%]
+  @apply text-[0.9rem]  desktop:w-[90%] leading-6  wide:w-[80%] phone:text-center tablet:w-[80%] desktop:text-center 
 }
 
 
   .about-section-image{
-    @apply desktop:w-[40%] w-[100%] tablet:w-[80%] 
+    background-image: url(../assets/images/logistics.jpeg);
+    @apply desktop:w-[40%] w-[100%] tablet:w-[80%]  h-[100%] bg-center bg-cover bg-no-repeat hidden desktop:flex
   }
 
   /* .asc-cta{
@@ -342,12 +343,14 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
 /* CSS */
 
 .asc-cta {
-  color: #2893EA;
-  border: 2px solid #2893EA;
+  color: black;
+  border: 2px solid black;
   border-radius: 0px;
   padding: 18px 36px;
   display: inline-block;
-  font-family: "Lucida Console", Monaco, monospace;
+  /* font-family: "Lucida Console", Monaco, monospace; */
+  font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
   font-size: 14px;
   letter-spacing: 1px;
   cursor: pointer;
@@ -355,7 +358,7 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
-  @apply phone:w-fit px-[0.7rem] py-[1rem] text-[0.7rem] desktop:text-[0.9rem] wide:text-[1rem] 
+  @apply phone:w-fit px-[0.7rem] py-[0.8rem] text-[0.7rem] desktop:text-[0.9rem] wide:text-[1rem]  bg-white rounded-sm desktop:mt-[1rem]
 }
 
 .asc-cta:hover {
@@ -363,27 +366,9 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
   @apply text-white
 }
 
-.asc-ctas {
-  /* color: #fff;
-  border: 3px solid #fff;
-
-  display: inline-block;
-  font-family: "Lucida Console", Monaco, monospace;
-  font-size: 14px;
-  letter-spacing: 1px;
-  cursor: pointer;
-  box-shadow: inset 0 0 0 0 #2893EA;
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s; 
-  transition: ease-out 0.4s;
-  @apply phone:w-fit desktop:px-[0.7rem] desktop:py-[0.7rem]  phone:px-[0.4rem] py-[0.4rem]  desktop:text-[0.9rem] wide:text-[1rem] rounded-[50%]  mt-[4rem] bg-[red] border-[2px] animate-bounce; */
-
-
-
-}
 
 .asc-ctas:hover {
-  box-shadow: inset 400px 0 0 0 #2893EA;
+  box-shadow: inset 400px 0 0 0 #e0c4c4;
   @apply text-white
 }
 
@@ -394,66 +379,50 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
 }
 
 .gs-heading{
-  @apply wide:text-[4rem] text-[1.9rem] desktop:text-[2.5rem] font-bold text-[#2893EA] mb-[0.5rem] tablet:text-[3rem]
+  @apply wide:text-[4rem] text-[1.9rem] desktop:text-[4rem] font-bold  mb-[0.5rem] tablet:text-[3rem] text-[#b39595] 
 }
 
 .galllery-subheading{
-  @apply text-center phone:w-[90%] desktop:w-[50%] text-[0.8rem] text-[#5b5a5a] mb-[2rem] wide:text-[1rem] tablet:w-[70%] 
+  @apply text-center phone:w-[90%] desktop:w-[80%] text-[0.8rem] text-[#5b5a5a] mb-[2rem] wide:text-[1rem] tablet:w-[70%]  desktop:text-[0.95rem]
 }
 
 
 
 .carousel{
-  @apply desktop:w-[50vw] desktop:h-[50%]  w-[90vw] h-[80%]
+  @apply desktop:w-[80vw] desktop:h-[20%]  w-[90vw] h-[80%]
 }
 
 
 
 .featured-products{
-  @apply px-[1rem] desktop:px-[1.5rem] wide:px-[2rem] mt-[3rem] h-fit flex flex-col items-center justify-center pb-[4rem]
+
+  @apply px-[1rem] desktop:px-[1.5rem] wide:px-[2rem] mt-[3rem] h-fit flex flex-col items-center justify-center pb-[4rem] 
 }
 
 .fp-heading{
-  @apply w-[100%] flex items-center justify-center text-[2rem]  wide:text-[4rem] font-bold text-[#2893Ea] desktop:text-[3rem] text-center
+  font-family: "Montserrat", sans-serif;
+
+  @apply w-[100%] flex items-center justify-center text-[2rem]  wide:text-[4rem] font-bold text-[#b39595]  desktop:text-[3rem] text-center
 }
 
 
 .fp-subheading{
-  @apply text-[0.8rem] text-center mt-[1rem] text-[#2f2e2e] tablet:w-[60%]
+  font-family: "Montserrat", sans-serif;
+   
+  @apply text-[0.8rem] desktop:text-[0.95rem]    text-center mt-[1rem] text-[#2f2e2e] tablet:w-[60%]
 }
 
 .fp-container{
   @apply desktop:flex desktop:flex-row   desktop:gap-[2rem] mt-[3rem] desktop:flex-wrap items-center justify-center grid grid-cols-2 gap-[1rem] h-fit tablet:grid tablet:grid-cols-3 tablet:gap-[4rem]
 } 
 
-.product-container{
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  @apply desktop:flex flex-col relative desktop:w-[15.75rem] desktop:h-[16.875rem] wide:w-[18rem] wide:h-[20rem] rounded-md hover:scale-105 hover:transition-all h-[8rem] w-[8rem]  mb-[2rem] tablet:w-[10rem] tablet:h-[10rem]
+.products-container{
+  @apply w-[100vw] h-fit mt-[2rem] 
 }
-
-.product-image{
-  @apply h-[100%] w-[100%]   
-}
-
-.product-text{
-  @apply right-[2rem] bottom-[2rem] text-[0.8rem]  desktop:text-[1.2rem] items-center justify-center flex flex-col font-normal text-[#2893Ea] mt-[0.2rem] bg-[white]
-}
-
-.product-text h1{
-  @apply font-bold  text-[white]
-}
-
-
-
-.pc-overlay4{
-  
-  @apply h-[100%] w-[100%] bg-[#3d3b3b] bg-no-repeat bg-center bg-cover flex absolute bg-opacity-30 hover:bg-opacity-55
-}
-
 
 
 .contacts-section{
-  @apply h-fit desktop:pb-[5rem] bg-[#61a8e2] flex items-center flex-col px-[5%] pb-[3rem]
+  @apply h-fit desktop:pb-[5rem] bg-[#b39595] flex items-center flex-col px-[5%] pb-[3rem]
 }
 
 
@@ -505,4 +474,27 @@ bg-[rgb(11,24,35)]  bg-opacity-40*/
 
 .cb-text{
   @apply text-[0.85rem]
+}
+
+
+.products-container{
+  @apply desktop:grid desktop:grid-cols-4 desktop:place-content-evenly desktop:px-[2rem] desktop:gap-y-[2rem] gap-2 desktop:py-[2rem] grid-cols-2 grid place-content-center px-[1rem]
+} 
+
+.product-container{
+  @apply desktop:h-[20rem] desktop:w-[14rem] w-[10rem] h-[11.5rem] shadow-lg shadow-[#b39595]
+}
+
+.pc-image-container{
+  @apply desktop:h-[15.5rem] shadow-sm  h-[9.5rem]
+}
+
+.pc-image{
+  @apply h-[100%] w-[100%]
+}
+
+.pc-{
+  font-family: "Montserrat", sans-serif;
+
+  @apply desktop:h-[4.5rem] w-[100%] flex items-center justify-center desktop:text-[1.2rem] desktop:font-bold text-[#b39595] text-[0.9rem] font-medium
 }
