--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -467,7 +467,7 @@
 
 
 .products-container{
-  @apply desktop:grid desktop:grid-cols-4 desktop:place-content-evenly desktop:px-[2rem] desktop:gap-y-[2rem] gap-2 desktop:py-[2rem] grid-cols-2 grid place-content-center px-[1rem] wide:place-items-center wide:gap-x-[1rem] tablet:grid-cols-3 tablet:place-items-center
+  @apply desktop:grid desktop:grid-cols-4 desktop:place-content-evenly desktop:px-[2rem] desktop:gap-y-[2rem] gap-2 desktop:py-[2rem] grid-cols-2 grid place-content-center px-[1rem] wide:place-items-center wide:gap-x-[1rem] tablet:grid-cols-3 tablet:place-items-center place-items-center
 } 
 
 
